# GCP_1

./: CMakeLists.txt  Report.docx
Report/: Brute_Force_Pseudo.txt  Report.docx  ~$Report.docx
data/: Bounding_Volume_Times.xlsx  Brute_Force_Times.xlsx  Collated.xlsx  ParallelLaws.xlsx
data/Gourd scale_25/: Bounding_Volume_Times.csv  Brute_Force_Times.csv  Tri_BV.csv
data/Gourd scale_75/: Bounding_Volume_Times.csv  Brute_Force_Times.csv  Tri_BV.csv
data/Magnolia scale_2/: Bounding_Volume_Times.csv  Brute_Force_Times.csv  Tri_BV.csv
data/Man HighPoly/: Bounding_Volume_Times.csv  Bounding_Volume_Times.xlsx  Tri_BV.csv  Tri_BV.xlsx
data/ManLowPoly/: Bounding_Volume_Times.csv  Brute_Force_Times.csv  Tri_BV.csv
data/Teapot scale_25/: Bounding_Volume_Times.csv  Brute_Force_Times.csv  Tri_BV.csv
data/Typhoon scale 75/: Bounding_Volume_Times.csv
data/Typhoon scale_25/: Bounding_Volume_Times.csv  Brute_Force_Times.csv  Tri_BV.csv
data/Typhoon scale_75/: Brute_Force_Times.csv  Tri_BV.csv
src/Brute_Force/: Hoops.h  Ray.cpp  Ray.h  main.cpp
